<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_name">Settings</string>
    <string name="help_name">About App</string>
    <string name="preferences">Preferences</string>
    <string name="home_name">Home</string>
    <string name="resources_name">Resources</string>
    <string name="share_name">Share...</string>
    <string name="feedback_name">Feedback</string>
    <string name="useful_contacts_name">Useful contacts</string>
    <string name="about_name">About</string>
    <string name="share_title">Share</string>
    <string name="_LightTxt">Light</string>
    <string name="_DarkTxt">Dark</string>
    <string name="app_name">Dementia Care</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="about_string">Dementia Care is an app made for people and families who are caring for someone who has dementia. The app was created to try improve peoples caring experiences by offering valuable information to provide assistance with normal everyday jobs and tasks, while producing precious insights and addressing peoples concerns about carers well-being. </string>
    <string name="basics_header">Basics</string>
    <string name="advance_header">Advanced</string>
    <string name="theme_summary">Change the appearance theme </string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="link_to_Site">
        <a href="https://www.alzheimers.org.uk/blog?labels=836">alzheimers.org.uk</a>
    </string>
    <string name="link_to_video">
        <a href="https://youtu.be/g6rk88V-TvM">Cure the Care System</a>
    </string>
    <string name="Story00_1">My name’s Derek Brown, and I care for my wife Margaret, who was diagnosed with Alzheimer’s disease in 2018. We live in North Yorkshire.</string>
    <string name="Story00_2">Everyone has a trigger point. A point when you know it’s serious. For us, it was in the car coming back from Doncaster airport. Every year, we went away somewhere warm and sunny during winter. We often ended up going to the same resort and the same hotel.</string>
    <string name="Story00_3">This time however, after a two-week holiday, Margaret turned to me and said, "So, are we going on holiday then?" It really shook me.</string>
    <string name="Story00_4">We got the diagnosis about six months later. Margaret’s condition has advanced quite quickly since then. She has incontinence now. Changing bed sheets twice a night is exhausting.</string>
    <string name="Story00_5">Alzheimer’s Society have helped us. Margaret used to have a volunteer who would take her out singing every fortnight. Coronavirus stopped that though. I have been going to a carers group for the last two years. But that has moved online as well now.</string>
    <string name="Story00_sh">Finding dementia support was difficult</string>
    <string name="Story00_6">Getting proper help was so tough for the first year or so. It felt like there was so much hard work just to find out the basics. And I passionately believe that isn’t fair. It’s bad enough that we need charities to tell us what benefits we are entitled to, like the Attendance Allowance or a blue badge.</string>
    <string name="Story00_7">Through my research, I discovered people living with dementia are entitled to a council tax discount – but councils don’t make this easy to claim, at a time in life when you need help the most. Many won’t backdate claims, with some stating that your loved one ‘must have been in need of assistance for at least six months’ before the claim. Six months is a long time to wait.</string>
    <string name="Story00_8">I submitted Freedom of Information requests to all 382 UK Councils; 380 wrote back. Of those 245 will only backdate discounts if your loved one is in receipt of Attendance Allowance – but how many people know that they’re entitled to it?</string>
    <string name="Story01_1">It was devastating for Jonathan to see his mother’s decline after she was diagnosed with mixed dementia. But the fight he faced for his mother’s care was even worse. After she sadly passed away, Jonathan is calling on Government to keep its promise, and rebuild the social care system.</string>
    <string name="Story01_2">My mum, Gillian, was a fantastic woman. She cared so deeply about every aspect of her family’s lives and was there for us at every twist and turn. This includes caring for my dad, who lived with dementia and a myriad of physical conditions.</string>
    <string name="Story01_3">Following Dad’s death, I had hoped that Mum would have an ‘Indian Summer’ with the opportunity to do all the things she’d not been able to do during years of caring for her husband. Perhaps she could have gone to those countries she’d always wanted to visit, continued her studies with the University of the Third Age, and spent more time with her family and friends, all of which she loved. </string>
    <string name="Story01_4">But in 2014, after my repeated pleas to her GP triggered by my concerns and those of other family members, Mum was diagnosed with dementia as well.</string>
    <string name="Story01_sh1">After Mum’s diagnosis</string>
    <string name="Story01_5">By the time the diagnosis was finally made, Mum’s dementia was fairly well-advanced</string>
    <string name="Story01_6">After six months living independently at home, Mum’s condition had hit her language, making it hard to communicate with her. As a former Head of Modern Languages at a secondary school, words and linguistics were her passion. It was so cruel to see her unable to string a sentence together, knowing she, and her words, were still there but I couldn’t hear them. </string>
    <string name="Story01_7">It was clear that Mum wouldn’t be able to live on her own for too much longer so my brother and I began the search for care homes in the villages close by.  But we hadn’t bargained on just how quickly we would need to move her.  Out of the blue, I got a call from the ambulance service. They had found Mum on her own, far from home, and by the end of the day, I had driven over to her home and we moved her in to a local care home. </string>
    <string name="Story01_8">Sadly, this care home really didn’t work out for Mum. There were a number of bad mistakes made and my Mum didn’t get the level of care she deserved or needed.</string>
    <string name="Story01_9">Coming to terms with Mum’s diagnosis and seeing the changes in her as she began to forget me was challenging. But it was even harder knowing that in the place where she should have felt safe and secure, she just wasn’t getting the care and support she needed. So, even though I knew the upheaval wouldn’t help her, we moved Mum to another home.</string>
    <string name="Story02_1">Meera’s grandma was diagnosed with Alzheimer’s disease more than 18 years ago, and mixed dementia later in life. Here she shares how the family have banded together to care for her, with the help of agency carers.</string>
    <string name="Story02_2">Ba’s (we call her Ba – Gujarati for ‘grandma’) two passions were her love of gardening and cooking, specifically cooking for loved ones. Growing up, she was a doting grandma and was devoted to her family – my grandad, her four children and their spouses, but mostly her ten grandchildren who she used to spoil endlessly.</string>
    <string name="Story06_1">During coronavirus, Sara and her family had been caring for her dad, Brian, who has frontotemporal dementia (FTD), in addition to working and home-schooling. They have lived through the flawed care system and are now calling on Government to act.</string>
    <string name="Story06_2">At the beginning of 2020, my dad, Brian lived relatively independently with support. Every day, he would be collected by the local bus service to make his way to the day centre.</string>
    <string name="Story06_3">Dad relied on structure and routine; a love for getting outdoors and an ice cream at the park. However, as day centres closed their doors due to coronavirus, this lifeline was taken away, with no sign of further care for him or support for me and my family.</string>
    <string name="Story06_sh1">Family carers are exhausted, over 40% are caring over 100 hours per week</string>
    <string name="Story06_4">In April 2020, we were left with the challenging but only decision possible, for myself, my husband and my eleven-year-old daughter, Aimee - to move in with Dad.</string>
    <string name="Story06_sh2">Managing caring responsibilities with other commitments</string>
    <string name="Story06_5">Juggling work, home-schooling, and full-time care, we did our absolute best, but the pressure mounted.</string>
    <string name="Story06_6">On good days, break-times for Aimee were cuddling up to her Grandad and reading to him. For me, it was witnessing the fun they have in each other’s company.</string>
    <string name="Story06_7">But on bad days, Dad was up and down the stairs, pacing around the house, back across the room and unable to leave my side, familiarity and routine were key to him.</string>
    <string name="Story06_8">There was simply no support available to support Dad living with us. The answers we got were he should have remained on his own. The feelings of confusion, anger and isolation he felt, I felt them too.</string>
    <string name="Story06_9">Due to his frontotemporal dementia (FTD), Dad lost his ability to communicate, and when his discomfort grew, understanding his needs became trickier and trickier.</string>
    <string name="Story06_10">Shortly after entering respite care, Dad had a number of falls.</string>
    <string name="Story06_11">At 6’2 he is a gentle giant, and a very tactile man. However, without the correct care and attention, he can tumble very far. Within 36 hours, Dad had three falls.</string>
    <string name="Story06_12">Negligence in the system resulted in a battle to visit him in hospital and then more change for him to place him in a different care home.</string>
    <string name="Story06_sh3">Battling with an unfair care system</string>
    <string name="Story06_13">Whilst after some time both Dad and my family have felt more settled, now the challenge we face is distance, a lack of connection, and the deterioration that the lack of Government support has caused to Dad’s condition.</string>
    <string name="Story06_14">My daughter, Aimee, would love to bake for my dad and the other residents at the care home or read with him as she did before.</string>
    <string name="Story06_15">Since Dad’s diagnosis I have seen care in every form. The care my daughter gives to my dad, the care Cathy, a Dementia Support Worker at Alzheimer’s Society, has given me, but also the care provided by a system that has been stretched to its limit.</string>
    <string name="Story06_16">Right now, our flawed social care system means that nearly a million UK families are struggling to care for their loved ones with the dignity and support they deserve.</string>
    <string name="Story06_17">Decades of under-funding have led to a system that’s difficult to access, costly, inadequate and unfair.</string>
    <string name="Story06_18"> It doesn’t have to be this way.</string>
</resources>