<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Story06">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true">

        <ImageButton
            android:id="@+id/cardCloseButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="?attr/backgroundTint"
            android:elevation="02dp"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_close_24"
            android:theme="@style/closeButtonTheme"
            app:cornerRadius="20dp"
            app:iconGravity="start"
            app:iconPadding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:fadingEdge="horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/story06"
                        android:transitionName="card_transition" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Juggling work, home-schooling, and full-time dementia care with an unfair system"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_1"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_2"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_3"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_sh1"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_4"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginBottom="5dp"
                        android:fadingEdge="horizontal"
                        android:scaleType="fitCenter"
                        android:src="@drawable/story06_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_sh2"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_5"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_6"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_7"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_8"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_9"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_10"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_11"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_12"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_sh3"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_13"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_13"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_14"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginBottom="5dp"
                        android:fadingEdge="horizontal"
                        android:scaleType="fitCenter"
                        android:src="@drawable/story06_2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_15"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_16"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_17"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story06_18"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>