<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Story00">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true"
        android:theme="@style/cardViewTheme">



        <ImageButton
            android:id="@+id/cardCloseButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="?attr/backgroundTint"
            android:elevation="02dp"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_close_24"
            android:theme="@style/closeButtonTheme"
            app:cornerRadius="20dp"
            app:iconGravity="start"
            app:iconPadding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:fadingEdge="horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/story00"
                        android:transitionName="card_transition" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="'The system isn’t set up to be fair' - Derek's struggle for dementia support"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story00_1"
                        android:textSize="14dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story00_2"
                        android:textSize="14dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story00_3"
                        android:textSize="14dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story00_4"
                        android:textSize="14dp"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:fadingEdge="horizontal"
                        android:scaleType="fitCenter"
                        android:src="@drawable/story00_01"
                        android:layout_marginBottom="5dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story00_5"
                        android:textSize="14dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story00_sh"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story00_6"
                        android:textSize="14dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story00_7"
                        android:textSize="14dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Story00_8"
                        android:textSize="14dp"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:fadingEdge="horizontal"
                        android:scaleType="fitCenter"
                        android:src="@drawable/story00_02"
                        android:layout_marginBottom="5dp"
                        />



                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>